# titan-gate

./: .gitignore  README.md  action.yml  fix_exclusion.py  pyproject.toml  receipt.json  requirements.txt  run_tests.py  setup_batch1.py  setup_batch2.py  test_live.md
.github/actions/verify/: action.yml
.github/workflows/: titan-gate.yml
.titan-gate/anchors/other_tenant/other_tenant_repo/: 2026-03-04.json
.titan/receipts/2026-03-06/: 3ae452f4-3a75-44fb-899f-cef8f0fd79b0.json
api/: anchor.py  constants.py  main.py  merkle.py  receipt_signing.py  replay.py
deploy/: Dockerfile  docker-compose.yml
docs/: SPEC.md  TITAN_GATE_MASTER_ROADMAP.docx  TITAN_GATE_SESSION_LOG.md  anchor-explorer.html
examples/: README.md
examples/sample-repo/: README.md
judge_engine/v1/: engine.py  policy_judge.py  semantic_judge.py  structural_judge.py
r-package/titangate/: DESCRIPTION  NAMESPACE
r-package/titangate/R/: install_cli.R  verify_receipt.R
scripts/: anchor_explorer.py  ci_evaluate.py  fill_test_vectors.py  generate_proof_bundle.py  seal_daily_root.py  titan_verify.py
tests/: test_anchor.py  test_anchor_explorer.py  test_api.py  test_constants.py  test_engine.py  test_merkle.py  test_proof_bundle.py  test_receipt_signing.py  test_replay.py  test_seal_daily_root.py  test_verifier.py
tests/vectors/: anchor_2026-03-04.json  cli_test_bundle.json  cli_test_bundle2.json  cli_test_bundle4.json  proof_bundle.json  test_bundle_tmp.json
titan_gate/: __init__.py  verify.py
titan_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+5 files in other folders)
